--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "claudia-api-builder": "^2.0.1",
+    "phone-formatter": "^0.0.2",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
   },
